закидал тудушек молодому таланту чтобы сука не выёбывался что всё легко и проект на неделю. Я его ещё так выебу, что жопа потом болеть будет